--- a/src/Bundle/WebBundle/Resources/views/Common/Form/prototypeCreate.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Common/Form/prototypeCreate.html.twig
@@ -84,5 +84,8 @@
               adder: $("#accard-prototype-field-adder")
             })
             .bindAll();
+    
+    {% block form_javascripts_extended '' %}
+
     </script>
 {% endblock %}
