Changed logout links in layout files.

--- a/src/Bundle/WebBundle/Resources/views/Backend/layout.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/layout.html.twig
@@ -140,7 +140,7 @@
                         {% if is_granted('ROLE_PREVIOUS_ADMIN') %}
                         <li><a href="?_switch=_exit"><i class="fa fa-user fa-fw"></i> Exit Impersonation</a></li>
                         {% endif %}
-                        <li><a href="{{ path('accard_logout') }}"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                        <li><a href="https://weblogin.pennkey.upenn.edu/logout"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                         </li>
                     </ul>
                     <!-- /.dropdown-user -->
