Created beginnings of create regimen flow, had to alter the flow code a little bit to accomodate front-end loading of parameters. This should allow front-side data.

--- a/src/Bundle/WebBundle/Resources/views/Common/Macros/form.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Common/Macros/form.html.twig
@@ -31,3 +31,13 @@
     <link href="{{ asset_url }}" rel="stylesheet" type="text/css">
 {% endstylesheets %}
 {% endmacro %}
+
+{% macro select_diagnosis(diagnosisForm) %}
+<div class="select-diagnosis col-md-12 well">
+    <p class="lead">{{ 'accard.diagnosis.form.select_diagnosis'|trans }}
+    <div class="form-group">
+        {{ form_widget(diagnosisForm) }}
+    </div>
+    {{ form_errors(diagnosisForm) }}
+</div>
+{% endmacro %}
