--- a/src/Bundle/WebBundle/Resources/views/Backend/Regimen/prototypeUpdate.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Regimen/prototypeUpdate.html.twig
@@ -10,16 +10,30 @@
 {% block form_page_title_translation 'accard.regimen_prototype.action.update'|trans %}
 {% block form_submit_action path('accard_backend_regimen_prototype_update', { id: regimen_prototype.id }) %}
 
+
 {% block form_body %}
+
+    {% from 'AccardWebBundle:Backend/Regimen:prototypeCreate.html.twig' import prototype %}
+
     {{ parent() }}
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6 row-split">
+            <h3>{{ 'accard.drug.title'|trans }}</h3>
             {{ form_widget(form.allowDrug) }}
-        </div>
-        <div class="col-md-3">
             <div id="drug-group-hider">
                 {{ form_widget(form.drugGroup) }}
             </div>
+        </div>
+        <div class="col-md-6">
+            <h3>{{ 'accard.activity.activities'|trans }}</h3>
+            <div id="accard-prototype-activities" data-prototype="{{ prototype(form.activityPrototypes.vars.prototype)|e }}">
+                {% for field in form.activityPrototypes %}
+                    {{ prototype(field) }}
+                {% endfor %}
+            </div>
+            <a href="#" id="accard-prototype-activity-adder" class="btn btn-primary btn-block">
+                {{- "accard.regimen_prototype.action.add_activity_prototype"|trans -}}
+            </a>
         </div>
     </div>
     <hr>
@@ -37,6 +51,9 @@
             target: 'drugGroup',
             condition: 'not_checked',
             action: 'clear'
+        })
+        .collection("#accard-prototype-activities", {
+          adder: $("#accard-prototype-activity-adder")
         })
         .bindAll()
     ;
