--- a/src/Bundle/WebBundle/Resources/views/Common/Form/prototypeCreate.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Common/Form/prototypeCreate.html.twig
@@ -9,6 +9,7 @@
 
 {% macro prototype(field) %}
     <div class="form-group">
+        <a href="#" data-accard="delete" data-accard-confirm="{{ 'accard.confirm_delete'|trans }}" class="pull-right">{{ 'accard.delete'|trans|lower }}</a>
         {{ form_label(field, 'accard.field.entity_name'|trans) }}
         {{ form_widget(field) }}
     </div>
