--- a/src/Bundle/WebBundle/Resources/views/Frontend/Flow/navigation.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Flow/navigation.html.twig
@@ -16,14 +16,16 @@
 
 <ul class="nav nav-tabs grid-tabs" role="tablist">
 {% for step in context.flow.steps %}
-    {% set trans_string = 'accard.flow.' ~ context.flow.scenarioAlias ~ '.' ~ step.name|trans %}
-    <li class="{% if step.active %}active{% endif %}{% if step.skipped or not render_links %} disabled{% endif %}">
-        <a href="{% if not step.skipped and render_links %}{{ flow_path(context.flow.displayRoute, context.flow.scenarioAlias, step.name) }}{% else %}#{% endif %}">
-            {{- trans_string|trans -}}
-        </a>
-    </li>
-    {% if step.active %}
-        {% set render_links = false %}
+    {% if not step.skipped %}
+        {% set trans_string = 'accard.flow.' ~ context.flow.scenarioAlias ~ '.' ~ step.name|trans %}
+        <li class="{% if step.active %}active{% endif %}{% if step.skipped or not render_links %} disabled{% endif %}">
+            <a href="{% if not step.skipped and render_links %}{{ flow_path(context.flow.displayRoute, context.flow.scenarioAlias, step.name) }}{% else %}#{% endif %}">
+                {{- trans_string|trans -}}
+            </a>
+        </li>
+        {% if step.active %}
+            {% set render_links = false %}
+        {% endif %}
     {% endif %}
 {% endfor %}
 </ul>
