--- a/src/Bundle/WebBundle/Resources/views/Common/Form/fieldCreate.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Common/Form/fieldCreate.html.twig
@@ -92,18 +92,19 @@
             .bindAll();
 
         {% if form.vars.value.id is null -%}
+
         // Enable or disable automatic slugging...
         !(function($) {
-            var presentationField = $('[id$="field_presentation"]:first');
-            var nameField = $('[id$="field_name"]:first');
-            var presentationButton = presentationField.next();
+            var presentation = $('[id$="field_presentation"]:first');
+            var field        = $('[id$="field_name"]:first');
+            var button       = presentation.next();
 
-            if (presentationButton.is('span')) {
-                presentationButton.on('click', function() {
-                    presentationField.off('keyup');
-                    presentationButton.remove();
-                    presentationField.parent().removeClass('input-group');
-                    nameField.prop('readonly', false);
+            if (button.is('span')) {
+                button.on('click', function() {
+                    presentation.off('keyup');
+                    button.remove();
+                    presentation.parent().removeClass('input-group');
+                    field.prop('readonly', false);
                 })
             }
         })(jQuery);
