--- a/src/Bundle/WebBundle/Resources/views/Frontend/layout.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/layout.html.twig
@@ -172,6 +172,13 @@
         </div>
 
     </div>
+
+    <div id="quick-add-modal" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content"></div>
+        </div>
+    </div>
+
     <!-- /#wrapper -->
 
     {% block javascripts -%}
