Created prototype selection button.

--- a/src/Bundle/WebBundle/Resources/views/Frontend/Activity/index.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Activity/index.html.twig
@@ -25,6 +25,7 @@
 
     {% block activity_tabs %}
         {% include 'AccardWebBundle:Frontend/Activity:tabs.html.twig' %}
+        {{ render(controller('AccardWebBundle:Frontend:prototypeChoiceForm', { 'type' : 'activity' })) }}
     {% endblock %}
 
     {% block activity_content %}
