--- a/src/Bundle/WebBundle/Resources/views/Frontend/Regimen/indexByPrototype.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Regimen/indexByPrototype.html.twig
@@ -22,3 +22,7 @@
         ]
     ) }}
 {% endblock %}
+
+{% block regimen_tabs %}
+    {% include 'AccardWebBundle:Frontend/Activity:tabs.html.twig' %}
+{% endblock %}
