--- a/src/Bundle/WebBundle/Resources/views/Frontend/Sample/indexByPrototype.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Sample/indexByPrototype.html.twig
@@ -22,3 +22,7 @@
         ]
     ) }}
 {% endblock %}
+
+{% block sample_tabs  %}
+    {% include 'AccardWebBundle:Frontend/Sample:tabs.html.twig' %}
+{% endblock %}
