--- a/src/Bundle/WebBundle/Resources/views/Frontend/Regimen/index.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Regimen/index.html.twig
@@ -25,6 +25,7 @@
 
     {% block regimen_tabs %}
         {% include 'AccardWebBundle:Frontend/Activity:tabs.html.twig' %}
+        {{ render(controller('AccardWebBundle:Frontend:prototypeChoiceForm', { 'type' : 'regimen' })) }}
     {% endblock %}
 
     {% block regimen_content %}
