--- a/src/Bundle/WebBundle/Resources/views/Frontend/Regimen/macros.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Regimen/macros.html.twig
@@ -8,7 +8,7 @@
 {% macro list(regimens) %}
 
 {% from 'AccardWebBundle:Common/Macros:alerts.html.twig' import info %}
-{% from 'AccardWebBundle:Common/Macros:buttons.html.twig' import edit, delete, show %}
+{% from 'AccardWebBundle:Common/Macros:buttons.html.twig' import edit, delete, show, generic %}
 {% from 'AccardWebBundle:Common/Macros:misc.html.twig' import label, icon %}
 
 {% if regimens|length > 0 %}
@@ -36,6 +36,7 @@
                 <td class="actions">
                     <div class="pull-right">
                         {{ show(path('accard_frontend_regimen_show', {'prototype': regimen.prototype.name, 'id': regimen.id}), null, 'xs') }}
+                        {{ generic(path('accard_frontend_regimen_activities', {'prototype': regimen.prototype.name, 'id': regimen.id}), 'accard.activity.activities'|trans, null, 'xs') }}
                         {{ edit(path('accard_frontend_regimen_update', {'prototype': regimen.prototype.name, 'id': regimen.id}), null, 'xs') }}
                         {{ delete(path('accard_frontend_regimen_delete', {'prototype': regimen.prototype.name, 'id': regimen.id}), null, 'xs') }}
                     </div>
