Created basis for prototype subject descriptors.

--- a/src/Bundle/WebBundle/Resources/views/Common/Form/prototypeCreate.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Common/Form/prototypeCreate.html.twig
@@ -53,6 +53,7 @@
                 {{ form_row(form.presentation) }}
             {% endif %}
             {{ form_row(form.name) }}
+            {{ form_row(form.description) }}
         </div>
         <div class="col-md-4">
             <div id="accard-prototype-fields" data-prototype="{{ prototype(form.fields.vars.prototype)|e }}">
