Frontend Canvas update

--- a/src/Bundle/WebBundle/Resources/views/Frontend/Patient/update.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Patient/update.html.twig
@@ -48,7 +48,7 @@
         function makeToday() {
             var now = new Date();
             var day = ("0" + now.getDate()).slice(-2);
-            var month = ("0" + now.getMonth()).slice(-2);
+            var month = ("0" + (now.getMonth() + 1)).slice(-2);
 
             return now.getFullYear() + "-" + (month) + "-" + (day);
         }
