--- a/src/Bundle/WebBundle/Resources/views/Backend/layout.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/layout.html.twig
@@ -182,6 +182,7 @@
             '@AccardWebBundle/Resources/public/js/plugins/modernizr/modernizr.js'
             '@AccardWebBundle/Resources/public/js/jquery.js'
             '@AccardWebBundle/Resources/public/js/bootstrap.js'
+            '@AccardWebBundle/Resources/public/js/angular/bower_components/underscore/underscore.js'
             '@AccardWebBundle/Resources/public/js/angular/app/bower_components/jquery-ui/jquery-ui.js'
             '@AccardWebBundle/Resources/public/js/angular/app/bower_components/angular/angular.js'
             '@AccardWebBundle/Resources/public/js/angular/app/bower_components/angular-animate/angular-animate.js'
@@ -189,9 +190,11 @@
             '@AccardWebBundle/Resources/public/js/angular/app/bower_components/angular-route/angular-route.js'
             '@AccardWebBundle/Resources/public/js/angular/app/bower_components/angular-resource/angular-resource.js'
             '@AccardWebBundle/Resources/public/js/angular/app/app.js'
+            '@AccardWebBundle/Resources/public/js/angular/app/grid/grid.js'
             '@AccardWebBundle/Resources/public/js/angular/app/canvas/canvas.js'
             '@AccardWebBundle/Resources/public/js/angular/app/palette/palette.js'
             '@AccardWebBundle/Resources/public/js/angular/app/services/services.js'
+            '@AccardWebBundle/Resources/public/js/angular/app/services/canvasProvider.js'
             '@AccardWebBundle/Resources/public/js/angular/app/components/version/version.js'
             '@AccardWebBundle/Resources/public/js/angular/app/components/version/version-directive.js'
             '@AccardWebBundle/Resources/public/js/angular/app/components/version/interpolate-filter.js'
