--- a/src/Bundle/WebBundle/Resources/views/widgets.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/widgets.html.twig
@@ -1,3 +1,6 @@
+{% block _default_widget -%}
+    Create a block called "{{ type }}_widget", to customize "{{ type }}" widget rendering.
+{%- endblock _default_widget %}
 
 {% block widget_widget -%}
     <div {{ block('_attributes') }}>
@@ -8,10 +11,6 @@
     {% endfor %}
     </div>
 {%- endblock widget_widget %}
-
-{% block _default_widget -%}
-    Create a block called "{{ type }}_widget", to customize "{{ type }}" widget rendering.
-{%- endblock _default_widget %}
 
 {% block heading_widget -%}
     <h{{ level }} {{ block('_attributes') }}>{{ translate ? heading|trans({}, translation_domain) : heading }}</h{{ level}}>
@@ -24,6 +23,17 @@
         {{ translate ? text|trans({}, translation_domain) : text }}
     {% endif -%}
 {% endblock text_widget %}
+
+{% block resource_widget %}
+{% for child in widget %}
+    {{ widget(child) }}<br>
+{% endfor %}
+{% endblock %}
+
+{% block scalar_widget %}
+    {%- if show_title is defined and show_title %}<b>{{ title|humanize }}: </b>{% endif -%}
+    {{- data.timestamp is defined ? data|date(date_format) : data -}}
+{% endblock %}
 
 {% block _attributes -%}
     {%- if id is not empty %}id="{{ id }}"{% endif -%}
