--- a/src/Bundle/WebBundle/Resources/views/Frontend/Activity/macros.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Activity/macros.html.twig
@@ -15,6 +15,7 @@
     <table id="activities" class="activity table table-bordered table-striped table-hover">
         <thead>
             <tr>
+                <th class="description">{{ 'accard.activity.form.description'|trans }}</th>
                 <th class="prototype">{{ accard_resource_sort('prototype', 'accard.activity.form.prototype'|trans) }}</th>
                 <th class="patient">{{ accard_resource_sort('patient', 'accard.activity.form.patient'|trans) }}</th>
                 <th class="activity-date">{{ accard_resource_sort('activityDate', 'accard.activity.form.activity_date'|trans) }}</th>
@@ -25,6 +26,7 @@
         <tbody>
         {% for activity in activities %}
             <tr id="activity-{{ activity.id }}">
+                <td class="description">{{ activity.description }}</td>
                 <td class="prototype">
                     <a href="{{ path('accard_frontend_activity_index_by_prototype', {'prototype': activity.prototype.name}) }}">
                         {{- activity.prototype.presentation -}}
