--- a/src/Bundle/WebBundle/Resources/views/Frontend/Attribute/macros.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Attribute/macros.html.twig
@@ -15,6 +15,7 @@
     <table id="attributes" class="attribute table table-bordered table-striped table-hover">
         <thead>
             <tr>
+                <th class="description">{{ 'accard.attribute.form.description'|trans }}</th>
                 <th class="prototype">{{ accard_resource_sort('prototype', 'accard.attribute.form.prototype'|trans) }}</th>
                 <th class="patient">{{ accard_resource_sort('patient', 'accard.attribute.form.patient'|trans) }}</th>
                 <th class="actions"></th>
@@ -23,6 +24,7 @@
         <tbody>
         {% for attribute in attributes %}
             <tr id="attribute-{{ attribute.id }}">
+                <td class="description">{{ attribute.description }}</td>
                 <td class="prototype">
                     <a href="{{ path('accard_frontend_attribute_index_by_prototype', {'prototype': attribute.prototype.name}) }}">
                         {{- attribute.prototype.presentation -}}
